--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -715,6 +715,7 @@ nav:
       - Data Class: concepts/data-class.md
       - Data Dictionary: concepts/data-dictionary.md
       - Data Field: concepts/data-field.md
+      - Data Lens: concepts/data-lens.md
       - Data Specification: concepts/data-specification.md
       - Data Structure: concepts/data-structure.md
       - Data Domain: concepts/subject-area.md
@@ -768,6 +769,7 @@ nav:
       - Like: concepts/like.md
       - Lineage: concepts/lineage.md
       - Lineage Warehouse: concepts/lineage-warehouse.md
+      - Meeting: concepts/meeting.md
       - Memento Classification: concepts/memento.md
       - Metadata Access Point: concepts/metadata-access-point.md
       - Metadata Access Server: concepts/metadata-access-server.md
@@ -807,6 +809,7 @@ nav:
       - Process: concepts/process.md
       - Project: concepts/project.md
       - pyegeria: concepts/pyegeria.md
+      - Rating: concepts/rating.md
       - Referenceable: concepts/referenceable.md
       - Repository Connector: concepts/repository-connector.md
       - Repository Governance Engine: concepts/repository-governance-engine.md
